# stats-example

./: CMakeLists.txt  ex_dummy.cpp  ex_mean.cpp  stat.cpp  stat_naive.cpp  stat_terrible.cpp
